--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ width: 100%;
     margin-left: 15px;
 }
 
+
 /*HOME*/
 .ba-home__title {
 	max-width: 1000px;
@@ -254,4 +255,81 @@ width: 100%;
 
 .ba-ingredients__info--pad {
 	padding: 0 25px;
+}
+
+
+/*media*/
+
+@media  (min-width: 320px) and (max-width: 767px)
+{
+	.ba-home {
+		padding-bottom: 25px;
+	}
+	.ba-logo {
+		left: 0px;
+	}
+	.ba-logo img {
+		width: 50%;
+	}
+	.ba-social {
+	    margin-top: 15px;
+	    padding-bottom: 15px;
+    }
+	.ba-menu {
+		display: none;
+	}
+	.ba-home__title h1 {
+		font-size: 20px;
+	    background-size: 150px;
+    	padding-bottom: 40px;
+	}
+	.ba-home__title {
+		padding-top: 90px;
+	}
+	.ba-button__home {
+	    margin-top: 15px;
+	    font-size: 10px;
+	    padding: 10px 17px;
+    }
+    .ba-about {
+    	padding-top: 20px;
+    	padding-bottom: 20px;
+    }
+    h2 {
+    	font-size: 25px;
+    }
+    .ba-about__info {
+    	max-width: 1200px;
+    }
+    .ba-about__info h2 {
+        background-size: 160px;
+    	padding-bottom: 90px;
+   	}
+    .ba-width-1-2 {
+    	width: 100%;
+    }
+	.ba-about__info img {
+		display: none;
+	}
+	.ba-ingredients {
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
+	.ba-ingredients__info{
+	    padding: 30px 50px 30px 50px;
+	}
+	.ba-ingredients__info h2 {
+		font-size: 21px;
+	}
+	.ba-ingredients__info p {
+		padding-bottom: 10px;
+		font-size: 10px;
+	}
+	.ba-ingredients__info img {
+    border: none;
+	width: 32%;
+    }
+    .ba-ingredients__info--pad {
+    	padding: 0;
+    }
 }
