--- a/css/style.css
+++ b/css/style.css
@@ -115,32 +115,34 @@ z-index:10;
 	left:10px;
 }
 
-.ba-menu {
-	list-style: none;
-	padding:0;
-    margin: 0;
-    margin-right: -35px;
-    position: relative;
-}
+@media (min-width: 960px){
+		.ba-menu {
+			list-style: none;
+			padding:0;
+		    margin: 0;
+		    margin-right: -35px;
+		    position: relative;
+		}
 
-.ba-menu a {
-	font-family: 'Gentium Book Basic', sans-serif;
-	color:  #ffffff;
-	font-size: 21px;
-	font-weight: 700;
-	border-top: 3px solid transparent;
-	padding: 42px 27px 40px;
-	display: block;
-}
+		.ba-menu a {
+			font-family: 'Gentium Book Basic', sans-serif;
+			color:  #ffffff;
+			font-size: 21px;
+			font-weight: 700;
+			border-top: 3px solid transparent;
+			padding: 42px 27px 40px;
+			display: block;
+		}
 
-.ba-menu a:hover {
-	border-top: 3px solid;
-}
+		.ba-menu a:hover {
+			border-top: 3px solid;
+		}
 
-.ba-menu li {
-    float: left;
-}
+		.ba-menu li {
+		    float: left;
+		}
 
+}
 .ba-social {
     margin-top: 50px;
     margin-left: 30px;
@@ -151,7 +153,6 @@ z-index:10;
     font-size: 21px;
     margin-left: 15px;
 }
-
 
 /*HOME*/
 .ba-home__title {
@@ -543,3 +544,126 @@ z-index:10;
 .fa {
 	margin-left: 11px;
 }
+
+
+/*responsive-menu*/
+
+@media (max-width:959px)
+{
+	.ba-menu{
+		position: fixed;
+		width: 170px;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		background: #282828;
+		z-index: 10;
+		list-style: none;
+		padding:0;
+	    margin: 0;
+	    opacity:.9;
+	    transform: translateX(100%);
+	   	}
+
+	.ba-menu a {
+		font-family: 'Gentium Book Basic', sans-serif;
+		color:  #ffffff;
+		font-size: 17px;
+		font-weight: 700;
+		padding: 16px 24px 16px;
+		display: block;
+	}
+
+	.ba-menu a:hover {
+		color: #B0840A;
+	}
+
+	.ba-menu li {
+	    float: none;
+	    border-bottom: 1px solid rgba(255,255,255, .1);
+	}
+
+	.ba-social{
+		display: none;
+	}
+
+	.ba-header {
+		background: none;
+	}
+
+	.ba-overlay {
+		position: fixed;
+		left: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		background: #FFF;
+		opacity: 0;
+		z-index:2;
+		visibility:hidden;
+	}
+
+	body {
+		transition: transform .4s;
+	}
+
+	.ba-menu-open {
+		transform:translateX(-170px);
+		overflow:hidden;
+		position: fixed;
+	}
+
+	.ba-menu-open .ba-overlay {
+		visibility:visible;
+		opacity: .4;
+	}
+}
+
+.ba-toggle{
+	 border: none;
+	 outline: none;
+	 line-height: 0;
+	 width: 30px;
+	 background: none;
+	 min-height: 0;
+	 padding: 0;
+	 margin-top: 35px;
+}
+@media (min-width: 960px) {
+	  .ba-toggle{
+	   display: none;
+	  }
+}
+
+.ba-toggle:hover{
+ 	background: none;
+}
+.ba-toggle__icon{
+	 margin: 10px 0;
+	 display: block;
+	 height: 4px;
+	 width: 100%;
+	 background: #FFF;
+	 position: relative;
+	 transition: background 0s .4s;
+}
+
+.ba-toggle__icon:before,
+.ba-toggle__icon:after{
+	 content: "";
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+	 height: 100%;
+	 width: 100%;
+	 background: #fff;
+}
+.ba-toggle__icon:before{
+ 	transform: translateY(-10px);
+}
+.ba-toggle__icon:after{
+	 transform: translateY(10px);
+}
+
+
+
